skeplib/tests/fixtures/parser/invalid/invalid_escape.sk
fn main() -> Int {
  io.println("bad\q");
  return 0;
}
